--- a/style.css
+++ b/style.css
@@ -1,66 +1,103 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
+    display: flex;
+    justify-content: center;
     background-color: #f7f7f7;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    text-align: center;
 }
 
-h3 {
-    font-size: 1.6rem;
-}
-
-h4 {
-    font-size: 1.2rem;
+hr {
+    width: 100%;
+    margin: 10px 0;
 }
 
 #container {
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
+    max-width: 400px;
+    margin: 10px;
+    padding: 10px;
+}
+
+.player {
+    display: flex;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
 }
 
-.grid {
-    border: 2px solid;
-    background-color: white;
-    padding: 5px;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
-    width: 325px;
+.dice-set {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
 }
 
-.grid div {
-    width: 40px;
-    height: 40px;
-    border: 1px solid;
+.die-opt {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    padding: 10px;
 }
 
-.baseline {
-    display: none;
+.die {
+    width: 80px;
+    height: 80px;
+    margin: 10px;
+    border-radius: 6px;
+    border: 1px solid #000;
+    background-image: url('./img/none.png'); 
 }
 
-.disabled {
-    pointer-events: none;
-}
-
-.player-one {
-    background-color: red;
-    border-radius: 50%;
-}
-
-.player-two {
-    background-color: blue;
-    border-radius: 50%;
+.chkbox, .atk-chkbox:checked, .def-chkbox:checked {
+    width: 150%;
+    height: 20px;
+    cursor: pointer;
 }
 
 button {
-    padding: 8px 16px;
-    display: none;
-    font-weight: bold;
-    background-color: green;
-    color: white;
-    border: 0;
+    width: 100%;
+    margin: 15px 20px;
+    padding: 10px;
     border-radius: 4px;
+    border: 0px;
+    cursor: pointer;
+    background-color: rgb(42, 241, 58);
+    font-weight: bold;
 }
+
+.btn-atk {
+    background-color: #da0202;
+}
+
+.btn-def {
+    background-color: #f6ff00;
+}
+
+.bg {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.winner {
+    background-color: rgb(190, 241, 194);
+}
+
+.a1 { background-image: url('./img/a1.png'); }
+.a2 { background-image: url('./img/a2.png'); }
+.a3 { background-image: url('./img/a3.png'); }
+.a4 { background-image: url('./img/a4.png'); }
+.a5 { background-image: url('./img/a5.png'); }
+.a6 { background-image: url('./img/a6.png'); }
+
+.d1 { background-image: url('./img/d1.png'); }
+.d2 { background-image: url('./img/d2.png'); }
+.d3 { background-image: url('./img/d3.png'); }
+.d4 { background-image: url('./img/d4.png'); }
+.d5 { background-image: url('./img/d5.png'); }
+.d6 { background-image: url('./img/d6.png'); }
